tests/ui/derive/fail_default_i64_primary_key.rs
#[derive(foundry::Model)]
#[foundry(table = "users")]
struct User {
    id: i64,
    email: String,
}

fn main() {}
